--- a/public/assets/front/css/responsive.css
+++ b/public/assets/front/css/responsive.css
@@ -224,7 +224,9 @@
     }
 
     .hero-content h1 {
-        font-size: 40px;
+        font-size: 4.3rem;
+        text-align: left;
+        line-height: 150%;
     }
 
     .page-title,
@@ -259,6 +261,7 @@
     }
 
     .event-search .search-item:first-child {
+        border-radius: 10px;
         border-bottom: 1px solid rgba(3, 10, 21, 0.15);
     }
 
