--- a/public/assets/front/css/responsive.css
+++ b/public/assets/front/css/responsive.css
@@ -170,6 +170,10 @@
 
 @media only screen and (max-width: 767px) {
 
+    .page-banner.pt-120{
+        background-position: center;
+    }
+
     .container,
     .container-fluid {
         padding-left: 15px;
@@ -224,7 +228,7 @@
     }
 
     .hero-content h1 {
-        font-size: 4.3rem;
+        font-size: 4.1rem;
         text-align: left;
         line-height: 150%;
     }
